crates/alloy-signer/tests/trybuild/no_async_provider.stderr
error[E0277]: the trait bound `LocalAlloyKeystoreSigner: AsyncProvider` is not satisfied
  --> tests/trybuild/no_async_provider.rs:14:29
   |
14 |     requires_async_provider(&signer);
   |     ----------------------- ^^^^^^^ the trait `Provider` is not implemented for `LocalAlloyKeystoreSigner`
   |     |
   |     required by a bound introduced by this call
   |
   = note: required for `LocalAlloyKeystoreSigner` to implement `AsyncProvider`
note: required by a bound in `requires_async_provider`
  --> tests/trybuild/no_async_provider.rs:4:31
   |
 4 | fn requires_async_provider<P: AsyncProvider>(_provider: &P) {}
   |                               ^^^^^^^^^^^^^ required by this bound in `requires_async_provider`
